<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:padding="0dp"
    tools:context=".MainActivity" >

    <ImageView
	    android:id="@+id/imgMainLogo"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentLeft="true"
	    android:layout_margin="0dp"
	    android:layout_marginBottom="19dp"
	    android:clickable="false"
	    android:focusable="false"
	    android:focusableInTouchMode="false"
	    android:longClickable="false"
	    android:paddingTop="0dp"
	    android:scaleType="center"
	    android:background="@null"
	    android:contentDescription="@string/app_name"
	    android:src="@drawable/logo" />
    
    <ImageView
	    android:id="@+id/imgMainGradeMenu"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="false"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/imgMainLogo"
	    android:layout_centerInParent="false"
	    android:layout_margin="0dp"
	    android:clickable="false"
	    android:focusable="false"
	    android:focusableInTouchMode="false"
	    android:longClickable="false"
	    android:paddingTop="0dp"
	    android:scaleType="fitXY"
	    android:background="@null"
	    android:contentDescription="@null"
	    android:src="@drawable/menu_grade" />
    
    <LinearLayout
        android:id="@+id/layMainLinha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/imgMainGradeMenu"
        android:layout_alignTop="@id/imgMainGradeMenu"
        android:layout_margin="0dp"
        android:weightSum="2" >
	
        <ImageButton
		    android:id="@+id/btnMainBase"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_margin="0dp"
		    android:background="@null"
		    android:padding="0dp"
		    android:scaleType="fitXY"
		    android:contentDescription="@string/function_base"
		    android:src="@drawable/btn_main_base" />
        
		<ImageButton
		    android:id="@+id/btnMainFunction"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:background="@null"
		    android:scaleType="fitXY"
		    android:padding="0dp"
		    android:layout_margin="0dp"
		    android:contentDescription="@string/title_activity_function"
		    android:src="@drawable/btn_main_function" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/layMainlinha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/imgMainGradeMenu"
        android:layout_below="@id/layMainLinha1"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-7dp"
        android:weightSum="2" >
		
		<ImageButton
		    android:id="@+id/btnMainDerivada"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:scaleType="fitXY"
		    android:background="@null"
		    android:padding="0dp"
		    android:contentDescription="@string/derivada"
		    android:src="@drawable/btn_main_derivada" />
	
		<ImageButton
		    android:id="@+id/btnMainIntegral"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:scaleType="fitXY"
		    android:background="@null"
		    android:padding="0dp"
		    android:contentDescription="@string/integral"
		    android:src="@drawable/btn_main_integral" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/layMainlinha3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/imgMainGradeMenu"
        android:layout_alignBottom="@id/imgMainGradeMenu"
        android:layout_margin="0dp"
        android:weightSum="2" >
			
		<ImageButton
		    android:id="@+id/btnMainConfig"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:scaleType="fitXY"
		    android:background="@null"
		    android:padding="0dp"
		    android:layout_margin="0dp"
		    android:contentDescription="@string/config"
		    android:src="@drawable/btn_main_config" />
	
		<ImageButton
		    android:id="@+id/btnMainAbout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:scaleType="fitXY"
		    android:background="@null"
		    android:padding="0dp"
		    android:layout_margin="0dp"
		    android:contentDescription="@string/about"
		    android:src="@drawable/btn_main_about" />
	</LinearLayout>

	<TextView
	    android:id="@+id/txtMainContact"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:autoLink="email"
	    android:linksClickable="true"
	    android:text="@string/contact"
	    android:textSize="12sp" />

	<TextView
	    android:id="@+id/txtMainDev"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/txtMainContact"
	    android:layout_centerHorizontal="true"
	    android:text="@string/developerBy"
	    android:textSize="12sp" />

</RelativeLayout>